<?xml version="1.0"?>
<package>
  <name>gazebo_tricycle_plugins</name>
  <version>0.0.0</version>
  <description>gazebo_tricycle_plugins</description>


  <maintainer email="ege@todo.todo">ege</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>